--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,51 +1,28 @@
 ---
 import { Image } from 'astro:assets'
-import type { ImageMetadata } from 'astro'
-import { cn } from '@/utils'
+import BaseCard from './BaseCard.astro'
+import { cn, getImageGlob, validateImagePath } from '@/utils'
 
 const {
-	as: Tag = 'div',
-	class: className,
-	href,
-	heading,
-	subheading,
-	date,
-	imagePath,
-	altText,
-	imageClass
+  imagePath,
+  altText,
+  imageClass,
+  ...restProps
 } = Astro.props
-const images = import.meta.glob<{ default: ImageMetadata }>('/src/assets/*.{jpeg,jpg,png,gif}')
 
-if (imagePath) {
-	if (!images[imagePath])
-		throw new Error(`"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`)
-}
+const images = getImageGlob()
+validateImagePath(imagePath, images)
 ---
 
-<Tag
-	class={cn(
-		className,
-		'relative rounded-2xl border border-border bg-primary-foreground px-5 py-3',
-		href && 'transition-all hover:border-foreground/25 hover:shadow-sm'
-	)}
-	href={href}
->
-	{
-		imagePath && (
-			<Image
-				src={images[imagePath]()}
-				alt={altText}
-				class={cn('mb-3 md:absolute md:mb-0', imageClass)}
-				loading='eager'
-			/>
-		)
-	}
-	<div class='flex flex-col gap-y-1.5'>
-		<div class='flex flex-col gap-y-0.5'>
-			<h1 class='text-lg font-medium'>{heading}</h1>
-			<h2 class='text-muted-foreground'>{subheading}</h2>
-			<h2 class='text-muted-foreground'>{date}</h2>
-		</div>
-		<slot />
-	</div>
-</Tag>
+<BaseCard {...restProps} class={cn('relative px-5 py-3', restProps.class)}>
+  {imagePath && (
+    <Image
+      src={images[imagePath]()}
+      alt={altText}
+      class={cn('mb-3 md:absolute md:mb-0', imageClass)}
+      loading='eager'
+      slot="image"
+    />
+  )}
+  <slot />
+</BaseCard>
