--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,42 +1,29 @@
 ---
 import { Image } from 'astro:assets'
-import type { ImageMetadata } from 'astro'
-import { cn } from '@/utils'
+import BaseCard from './BaseCard.astro'
+import { cn, getImageGlob, validateImagePath } from '@/utils'
 
 const {
-	as: Tag = 'a',
-	class: className,
-	href,
-	heading,
-	subheading,
-	imagePath,
-	altText,
-	target
+  imagePath,
+  altText,
+  ...restProps
 } = Astro.props
-const images = import.meta.glob<{ default: ImageMetadata }>('/src/assets/*.{jpeg,jpg,png,gif}')
-if (!images[imagePath])
-	throw new Error(`"${imagePath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`)
+
+const images = getImageGlob()
+validateImagePath(imagePath, images)
 ---
 
-<Tag
-	class={cn(
-		className,
-		'flex flex-col gap-y-3 rounded-2xl border border-border bg-primary-foreground ',
-		href && 'transition-all hover:border-foreground/25 hover:shadow-sm'
-	)}
-	href={href}
-	target={target}
->
-	<Image
-		src={images[imagePath]()}
-		alt={altText}
-		class='h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover'
-		loading='eager'
-	/>
-	<div class='flex flex-col gap-y-0.5 px-5 py-4'>
-		<h1 class='text-lg font-medium'>{heading}</h1>
-		<h2 class='text-muted-foreground'>{subheading}</h2>
-	</div>
-
-	<slot />
-</Tag>
+<BaseCard {...restProps} class={cn('flex flex-col gap-y-3', restProps.class)}>
+  {imagePath && (
+    <Image
+      src={images[imagePath]()}
+      alt={altText}
+      class='h-48 w-full rounded-2xl rounded-bl-none rounded-br-none object-cover'
+      loading='eager'
+      slot="image"
+    />
+  )}
+  <div class='flex flex-col gap-y-0.5 px-5 py-4'>
+    <slot />
+  </div>
+</BaseCard>
