--- a/src/components/ResumePage.astro
+++ b/src/components/ResumePage.astro
@@ -190,6 +190,10 @@ const resumeConfig = getLocalizedResumeConfig(currentLocale)
 					)
 				})
 			}
+			<Card
+				heading="正在开发中……"
+				subheading="敬请期待"
+			/>
 		</Section>
 
 		<Section title={getI18nText('sections.certificates', currentLocale)}>
