--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,4 +1,8 @@
 ---
+// 原项目：astro-theme-pure (Apache-2.0)
+// 原作者：cworld1 (https://github.com/cworld1)
+// 修改记录：
+// 2026-02-15 修改者：添加国际化导航菜单、主题切换和移动端响应式支持
 import { siteConfig, menuLinks } from '@/site-config'
 import { getCurrentLocale, getAlternateLanguageUrl } from '@/utils/locale'
 
