--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,4 +1,8 @@
 ---
+// 原项目：astro-theme-pure (Apache-2.0)
+// 原作者：cworld1 (https://github.com/cworld1)
+// 修改记录：
+// 2026-02-15 修改者：在页脚添加原项目署名和Apache-2.0协议链接
 import { siteConfig } from "@/site-config"
 import { getLocalizedResumeConfig, getI18nText, getCurrentLocale } from '@/utils/locale'
 
