feat(i18n): add comingSoon translation and update inDevelopment text
- Add "comingSoon" translation key to both Chinese and English locales
- Update Chinese "inDevelopment" text to use proper ellipsis character
- Replace hardcoded text in ResumePage with i18n function calls for better localization support

--- a/src/components/ResumePage.astro
+++ b/src/components/ResumePage.astro
@@ -195,8 +195,8 @@ const resumeConfig = getLocalizedResumeConfig(currentLocale)
 				})
 			}
 			<Card
-				heading="正在开发中……"
-				subheading="敬请期待"
+				heading={getI18nText('common.inDevelopment', currentLocale)}
+				subheading={getI18nText('common.comingSoon', currentLocale)}
 			/>
 		</Section>
 
