feat: refactor configuration imports and fix avatar image import
- Consolidate imports from `@/site-config` to `@/config` in BaseHead, ReadPage, and RecordPage components
- Update NowPage to use `getLocalizedNowConfig` and rename `resumeConfig` to `nowConfig` for clarity
- Change ReadPage to display `item.opinion` instead of `item.description`
- Fix avatar image import in ResumePage to resolve dynamic/static import conflict using `getImageGlob` utility
- Remove unused `getI18nText` import from BaseHead component

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,8 +4,7 @@
 import '../styles/app.css'
 
 import type { SiteMeta, Locale } from '@/types'
-import { siteConfig } from '@/site-config'
-import { getI18nText } from '@/utils/locale'
+import { siteConfig } from '@/config'
 
 type Props = SiteMeta & {
 	title?: string
