--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -3,7 +3,7 @@
 // 原作者：cworld1 (https://github.com/cworld1)
 // 修改记录：
 // 2026-02-15 修改者：在页脚添加原项目署名和Apache-2.0协议链接
-import { siteConfig } from "@/site-config"
+import { siteConfig } from "@/config"
 import { getLocalizedResumeConfig, getI18nText, getCurrentLocale } from '@/utils/locale'
 
 const currentLocale = getCurrentLocale(Astro.url)
