--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ import Header from '@/components/layout/Header.astro'
 import ThemeProvider from '@/components/ThemeProvider.astro'
 import { getCurrentLocale, getI18nText } from '@/utils/locale'
 
-import { siteConfig } from '@/site-config'
+import { siteConfig } from '@/config'
 
 interface Props {
 	meta: SiteMeta
