--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -3,7 +3,7 @@
 // 原作者：cworld1 (https://github.com/cworld1)
 // 修改记录：
 // 2026-02-15 修改者：添加国际化导航菜单、主题切换和移动端响应式支持
-import { siteConfig, menuLinks } from '@/site-config'
+import { siteConfig, menuLinks } from '@/config'
 import { getCurrentLocale, getAlternateLanguageUrl } from '@/utils/locale'
 
 const currentLocale = getCurrentLocale(Astro.url)
