--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -91,13 +91,19 @@ const socialImageURL = new URL(ogImage ? ogImage : '/social-card.png', Astro.url
 <meta content={siteTitle} property='twitter:title' />
 <meta content={siteDescription} property='twitter:description' />
 <meta content={socialImageURL} property='twitter:image' />
+{/* Hreflang tags for internationalization */}
+{/* Self-referencing hreflang tag */}
+<link href={canonicalURL} hreflang={currentLocale === 'zh-cn' ? 'zh-CN' : 'en'} rel='alternate' />
+{/* Other language versions */}
 {
 	currentSiteConfig.otherLanguages.map((lang) => (
 		<link href={new URL(`${lang.url}`, canonicalURL).href} hreflang={lang.lang} rel='alternate' />
 	))
 }
+{/* x-default tag for default language (English) */}
+<link href={new URL('/', canonicalURL).href} hreflang='x-default' rel='alternate' />
 {/* Sitemap */}
-<link href='/sitemap-index.xml' rel='sitemap' />
+<link href='/sitemap.xml' rel='sitemap' />
 
 <meta content={Astro.generator} name='generator' />
 {
