--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -106,6 +106,47 @@ const socialImageURL = new URL(ogImage ? ogImage : '/social-card.png', Astro.url
 <link href='/sitemap.xml' rel='sitemap' />
 
 <meta content={Astro.generator} name='generator' />
+{/* Schema.org structured data */}
+{
+	currentSiteConfig.schemaOrg && (
+		<script type='application/ld+json' is:inline>
+			{JSON.stringify({
+				"@context": "https://schema.org",
+				"@graph": [
+					{
+						"@type": "Person",
+						"@id": "https://zwg.me/#person",
+						"name": currentSiteConfig.schemaOrg.person.name,
+						"alternateName": currentSiteConfig.schemaOrg.person.alternateName,
+						"url": "https://zwg.me/",
+						"image": "https://zwg.me/favicon/avatar.png",
+						"sameAs": [
+							"https://likeit.dev"
+						],
+						"jobTitle": currentSiteConfig.schemaOrg.person.jobTitle,
+						"description": currentSiteConfig.schemaOrg.person.description,
+						"knowsAbout": currentSiteConfig.schemaOrg.person.knowsAbout,
+						"mainEntityOfPage": {
+							"@type": "WebPage",
+							"@id": "https://zwg.me/"
+						}
+					},
+					{
+						"@type": "WebSite",
+						"@id": "https://zwg.me/#website",
+						"url": "https://zwg.me/",
+						"name": currentSiteConfig.schemaOrg.website.name,
+						"description": currentSiteConfig.schemaOrg.website.description,
+						"publisher": {
+							"@id": "https://zwg.me/#person"
+						},
+						"inLanguage": ["en", "zh-CN"]
+					}
+				]
+			})}
+		</script>
+	)
+}
 {
 	import.meta.env.PROD && (
 		<script
