refactor: update favicon configuration and manifest references
Updated the favicon configuration in BaseHead.astro to use new favicon files and updated manifest reference. Replaced the commented-out favicon setup with a cleaner implementation using PNG icons for different sizes and updated the manifest path from '/favicon/site.webmanifest' to '/manifest.json'.

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,14 +29,11 @@ const socialImageURL = new URL(ogImage ? ogImage : '/social-card.png', Astro.url
 <title>{siteTitle}</title>
 
 {/* Icons / Favicon */}
-<!-- <link href="favicon/favicon.ico" rel="icon" sizes="any" />
-<link href="favicon/icon.svg" rel="icon" type="image/svg+xml" />
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" />
-<link href="/manifest.webmanifest" rel="manifest" /> -->
-
-<link rel='icon' href='/favicon/avatar.png' sizes='any' />
+<link rel='icon' href='/favicon/favicon.ico' sizes='any' />
+<link rel='icon' href='/favicon/android-chrome-192x192.png' sizes='192x192' />
+<link rel='icon' href='/favicon/android-chrome-512x512.png' sizes='512x512' />
 <link rel='apple-touch-icon' sizes='1350x1350' href='/favicon/apple-touch-icon.png' />
-<link rel='manifest' href='/favicon/site.webmanifest' />
+<link rel='manifest' href='/manifest.json' />
 
 {/* Font preloads */}
 <!-- <link rel='preload' href='/fonts/Satoshi-Variable.ttf' as='font' type='font/ttf' crossorigin />
